
3.0205 2015-11-29 (rurban)
       - Add t/20_unknown.t tests from JSON::PP, extended.
       - Fix convert_blessed, disallow invalid JSON. #46 (reported by Dan Book)
         convert_blessed returns now always a string, even for numbers.
       - Fix encountered GLOB error message (still in JSON::XS, and JSON::PP took
         over the wrong message also).

3.0204 2015-11-26 (rurban)
       - Fix is_bool with JSON::XS >3.0 interop. #44 (Graham Knop)

3.0203 2015-11-26 (rurban)
       - New optional decode_json() argument to set allow_nonref as in
         RFC 7159 and PHP. Before 3.02 JSON::XS and Cpanel::JSON::XS always
         allowed nonref values for decode_json due to an interal bug.

3.0202 2015-11-26 (rurban)
       - New feature: convert_blessed for encode.
         Stringify overloaded perl objects and with allow_blessed even without
         string overload (#37)

3.0201 2015-11-26 (rurban)
       - Simplify handling of references, removing all the complicated
         work-around for reblessing. Breaks overloaded values, but fixes
         serialising refs to readonly values. #21 (Gianni Ceccarelli)
         new test t/53_readonly.t
         schmorp thinks that overloading is broken with this patch,
         but reblessing and breaking readonly is worse.
       - Stabilize Test::Kwalitee with missing XS dependencies
       - suggests common::sense, not recommend. #36 (mst)
       - Boolean interop: use only JSON::PP::Boolean. #40
         Remove our own JSON::XS::Boolean, and solely use
         JSON::PP::Boolean and accept Mojo::JSON::_Bool and
         Types::Serialiser::Boolean, which is aliased to JSON::PP::Boolean.
         JSON::YAJL::Parser just produces an unbless IV (0|1).
         fix overload of our bools.
         stringify true to "true", false to "0"
       - accept Mojo::JSON::_Bool (#37)
         Mojo does not store their booleans as JSON::PP::Boolean
         as everybody else does.
       - accept is_bool as method call also.