@@ -41,6 +41,7 @@ t/25_boolean.t
 t/52_object.t
 t/53_readonly.t
 t/54_stringify.t
+t/55_modifiable.t
 t/96_interop.t
 t/96_mojo.t
 t/97_unshare_hek.t
